2009-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/vfs-device.c: robust_open can return fd 0.

2009-01-19  Tom Robinson <tom.robinson@constantstream.com>
	* server-src/amoverview.pl: fix parsing of filenames containing colons

2009-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amzfs-sendrecv.pl: Handle incremental,
	                                     new KEEP-SNAPSHOT property.
	* man/xml-source/amzfs-sendrecv.8.xml: Document it.
	* application-src/teecount.c: New program.
	* application-src/Makefile.am: Add teecount.
	* perl/Amanda/Application/Zfs.pm: Work with 'current' snapshot.
	* common-src/amanda.h: include "safe-read.h"

2009-01-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Don't add 'dump to tape' in the 'dumped'
	                          result.

2009-01-16 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: fix the fedora 10 fix for other distros

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Fix for fedora 10.

2009-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/vfs-device.c: don't cache the dir_handle, as
	  such caching does not work on some network filesystems

2009-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: add documentation
	  of inheritance for config sections

2009-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: add a 'config' parameter
	* man/xml-source/amtapetype.8.xml: documentation
	* installcheck/amtapetype.pl: test with a small vtape

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Use bitwise NOT for taper_state.

2009-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c: Go to next tape if device_start_file fail.
	* device-src/tape-device.c: write a filemark when a file is finished.
	* device-src/tape-device.h (TapeDevice): Remove first_file.
